[project]
name = "molbart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra>=2.5",
    "numpy>=1.24.4",
    "omegaconf>=2.3.0",
    "pandas>=2.0.3",
    "pysmilesutils",
    "rdkit==2022.9.3",
]

[tool.uv.sources]
pysmilesutils = { git = "https://github.com/MolecularAI/pysmilesutils.git" }
